I did Jack In the box, and sound effect machine (IP)

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -15,3 +15,7 @@
 /sawing-wood-daniel_simon.wav
 /snare.jpg
 /sound.wav
+/heavy-rain-daniel_simon.wav
+/marbles-daniel_simon.wav
+/marbles-daniel_simon (1).wav
+/marbles-daniel_simon2.wav
